--- a/css/theme.css
+++ b/css/theme.css
@@ -1,11 +1,18 @@
 /* Created by Spock */
 
 body {
-    background-color: powderblue;
+    background-color: peachpuff;
 }
 h1 {
     color: blue;
 }
 p {
     color: red;
+}
+h2 {
+    color: darkgreen;
+}
+button {
+    background-color: chartreuse;
+    color: white;
 }
